--- a/ca.ualberta.cs.smr.refmerge/docker-compose.yml
+++ b/ca.ualberta.cs.smr.refmerge/docker-compose.yml
@@ -1,7 +1,8 @@
 services:
   dev-container-refmerge:
     build:
-      context: https://github.com/manuelohrndorf/dev-container.git
+      #context: https://github.com/manuelohrndorf/dev-container.git
+      context: .
       dockerfile: Dockerfile
     container_name: dev-container-refmerge
     ports:
