--- a/ca.ualberta.cs.smr.refmerge/docker-compose.yml
+++ b/ca.ualberta.cs.smr.refmerge/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build:
       context: https://github.com/manuelohrndorf/dev-container.git
       #context: .
-      dockerfile: Dockerfile
+      dockerfile: ca.ualberta.cs.smr.refmerge/Dockerfile
     container_name: dev-container-refmerge
     ports:
       - "127.0.0.1:3000:3000" # HTTP access: https://localhost:3000/
