--- a/ca.ualberta.cs.smr.refmerge/docker-compose.yml
+++ b/ca.ualberta.cs.smr.refmerge/docker-compose.yml
@@ -1,8 +1,10 @@
 services:
   dev-container-refmerge:
     build:
-      context: https://github.com/manuelohrndorf/ca.ualberta.cs.smr.refmerge.git
-      dockerfile: docker/dev-refmerge-lscr-arch/Dockerfile
+      #context: https://github.com/manuelohrndorf/ca.ualberta.cs.smr.refmerge.git
+      context: .
+      #dockerfile: docker/dev-refmerge-lscr-arch/Dockerfile
+      dockerfile: Dockerfile
     container_name: dev-container-refmerge
     ports:
       - "127.0.0.1:3000:3000" # HTTP access: https://localhost:3000/
