--- a/ca.ualberta.cs.smr.refmerge/docker-compose.yml
+++ b/ca.ualberta.cs.smr.refmerge/docker-compose.yml
@@ -1,10 +1,12 @@
 services:
   dev-container-refmerge:
     build:
+      context: ${BUILD_CONTEXT}
+      dockerfile: ${BUILD_DOCKERFILE}
       #context: https://github.com/manuelohrndorf/ca.ualberta.cs.smr.refmerge.git
-      context: .
+      #context: .
       #dockerfile: docker/dev-refmerge-lscr-arch/Dockerfile
-      dockerfile: Dockerfile
+      #dockerfile: Dockerfile
     container_name: dev-container-refmerge
     ports:
       - "127.0.0.1:3000:3000" # HTTP access: https://localhost:3000/
