--- a/ca.ualberta.cs.smr.refmerge/docker-compose.yml
+++ b/ca.ualberta.cs.smr.refmerge/docker-compose.yml
@@ -1,11 +1,11 @@
 services:
   dev-container-refmerge:
     build:
-      context: ${BUILD_CONTEXT}
-      dockerfile: ${BUILD_DOCKERFILE}
-      #context: https://github.com/manuelohrndorf/ca.ualberta.cs.smr.refmerge.git
+      #context: ${BUILD_CONTEXT}
+      #dockerfile: ${BUILD_DOCKERFILE}
+      context: https://github.com/manuelohrndorf/ca.ualberta.cs.smr.refmerge.git
+      dockerfile: docker/dev-refmerge-lscr-arch/Dockerfile
       #context: .
-      #dockerfile: docker/dev-refmerge-lscr-arch/Dockerfile
       #dockerfile: Dockerfile
     container_name: dev-container-refmerge
     ports:
